--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.5"
+    "mongoose": "^5.12.5",
+    "nodemailer": "^6.6.0"
   },
   "devDependencies": {
     "concurrently": "^6.0.2",
